[package]
name = "vibe-grammars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"

[dev-dependencies]
dir-test = "0.2.1"
insta = "1.38.0"
pest-ast = "0.3.4"
pest-test = "0.1.6"
pest-test-gen = "0.1.7"
